# recognition_3d

./: CMakeLists.txt  README.md  package.xml
cfg/: PublishDataset.cfg
euslisp/: in-hand-reconstruction-gripper-v6.l  in_hand_reconstruction_gripper_v4.l  recognition-from-multi-view-by-hand.l  save-image.l
include/: utils.hpp
include/recognition_3d/: segment_to_mask_image.h
launch/: collect_data_by_moving_object.launch  collect_images_for_bthesis_system.launch  collect_raw_data_for_test_split.launch  collect_raw_data_for_train_split.launch  fcn_depth_prediction.launch  in_hand_reconstruction.launch  object_3d_annotation.launch  publish_dataset.launch  reconstruct_from_foreground.launch  rosbag_play.launch  rosbag_play_setup_for_pick.launch  rosbag_record.launch  save_image.launch  save_images_for_refridgerator.launch  save_object_pose.launch  save_raw_image_for_annotation.launch  save_raw_image_for_auto_generation.launch  save_raw_image_for_test.launch  test.launch  test_color_filter.launch
node_scripts/: fcn_depth_prediction.py  publish_dataset.py
node_scripts/models/: __init__.py  fcn32s.py  fcn8s.py
plugins/nodelet/: librecognition_3d.xml
rvizconfig/: camera.rviz  fcn_depth_prediction.rviz  fcn_depth_prediction_pr2.rviz  in_hand_reconstruction.rviz  object_3d_annotaion.rviz  object_3d_annotation.rviz  pr2_kinect.rviz  test.rviz  test_color_filter.rviz
scripts/: create_scenes_dataset.py
src/: mesh_publisher.cpp  plane_detection.cpp  segment_to_mask_image.cpp
