<?xml version="1.0"?>
<package>
  <name>recognition_3d</name>
  <version>0.0.0</version>
  <description>The recognition_3d package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>

  <license>BSD</license>

  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>jsk_arc2017_baxter</run_depend>
  <run_depend>jsk_arc2017_common</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_pcl_ros_utils</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>label_fusion_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opencv_apps</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_reconfigure</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/librecognition_3d.xml"/>
  </export>
</package>
